<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="56dp"
        android:text="@string/details_of_task"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="73dp"
        android:layout_height="46dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="64dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lbl_Status"
        app:layout_constraintEnd_toStartOf="@+id/txt_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/lbl_Status"
        android:layout_width="79dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="43dp"
        android:text="@string/status"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Save"
        app:layout_constraintEnd_toStartOf="@+id/sp_Status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txt_Title"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <Spinner
        android:id="@+id/sp_Status"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="29dp"
        android:entries="@array/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_Status"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#00897B"
        android:onClick="btnSave"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/btn_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Status" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Back"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="115dp"
        android:backgroundTint="#7C8584"
        android:onClick="btnBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Save" />
</androidx.constraintlayout.widget.ConstraintLayout>