<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_AddAndShow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#C8C2C2"
        android:onClick="AddAndShow"
        android:text="@string/add_and_show_tasks"
        app:layout_constraintBottom_toTopOf="@+id/btn_ShowDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NumOfDueTasks" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ShowDone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#7CB342"
        android:onClick="btnShowDone"
        android:text="@string/show_done_tasks"
        app:layout_constraintBottom_toTopOf="@+id/btn_ShowDue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_AddAndShow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ShowDue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="#D81B60"
        android:onClick="btnShowDue"
        android:text="@string/show_due_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ShowDone" />

    <TextView
        android:id="@+id/txt_NumOfAllTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:text="Number Of All Tasks"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_NumOfDoneTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_NumOfDoneTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="11dp"
        android:text="Number Of Done Tasks"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_NumOfDueTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NumOfAllTasks" />

    <TextView
        android:id="@+id/txt_NumOfDueTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="103dp"
        android:text="Number Of Due Tasks"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_AddAndShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_NumOfDoneTasks" />

</androidx.constraintlayout.widget.ConstraintLayout>